updated section height to fix browser topbar scroll on mobile

--- a/src/pages/index.styles.scss
+++ b/src/pages/index.styles.scss
@@ -1,7 +1,7 @@
 @import "../styles/colors";
 section{
     width: 100vw;
-    height: calc(100vh - 45px);
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
